# COARAMAUSE

./: .gitignore  README.md
COARAMAUSE_INTEGRATED/COARAMAUSE_INTEGRATED/: sdkconfig  sdkconfig.old
COARAMAUSE_INTEGRATED/COARAMAUSE_INTEGRATED/main/: CMakeLists.txt  COARAMAUSE.c  ili9340.c  pngSlide.c
COARAMAUSE_LCD/: .DS_Store (1)  CMakeLists.txt
COARAMAUSE_LCD/main/: CMakeLists.txt  main.c  pngSlide.c  pngSlide.h  uart_slave_lcd.c  uart_slave_lcd.h
COARAMAUSE_LCD/spiffs_files/: ._pg.csv
COARAMAUSE_LCD_SOUND/: partitions.csv  sdkconfig (1)  sdkconfig.old  sdkconfig_BU
COARAMAUSE_LCD_SOUND/main/: CMakeLists.txt  i2sSound.c  i2sSound.h  main.c  pngSlide.c  pngSlide.h  uart_slave_lcd.c  uart_slave_lcd.h  wavType.c  wavType.h
COARAMAUSE_WIFI/: sdkconfig  sdkconfig.old
COARAMAUSE_WIFI/main/: CMakeLists.txt  http_server.c  main.c  wifi_app.c  wifi_app.h
COARAMAUSE_WIFI/main/webpage/: app.js  index.html
COARAMAUSE_WIFI_CLIENTS/: CMakeLists.txt  sdkconfig  sdkconfig.old
COARAMAUSE_WIFI_CLIENTS/main/: CMakeLists.txt  main.c  tasks_common.h  uart_master_wifi.c
COARAMAUSE_WIFI_CLIENTS/main/NOT_USING/: wifi_app.c  wifi_app.h  xxx_main.c
